components/header/Header.module.css
.container {
  position: sticky;
  top: 0;
  z-index: 400;
  width: 100dvw;
  height: 60px;
  backdrop-filter: blur(10px);
  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
  padding: 0 16px;
}

.menu_mobile {
  width: 100%;
  height: 100%;
  display:flex;
  justify-content: space-between;
  align-items: center;

  @media (min-width: 768px) {
    display: none;
  }
}

.logo_mobile img{
  width: 60px;
}

.menu_desktop {
  display: flex;
  justify-content: space-between;
  align-items: center;

  @media (max-width: 768px) {
    display: none;
  }
}

.links ul {
  display: flex;
  gap: 16px;
  align-items: center;
}

